--- a/TFM_tex/biblio.bib
+++ b/TFM_tex/biblio.bib
@@ -63,3 +63,183 @@ author = {Luca Longo and Mario Brcic and Federico Cabitza and Jaesik Choi and Ro
 }
 
 
+@book{PatternRecogLibro,
+    title={Pattern recognition and machine learning},
+    author={Christopher Bishop},
+    publisher={Springer},
+    year={2006}
+}
+
+ @book{pml1Book,
+ author = {Kevin P. Murphy},
+ title = {Probabilistic Machine Learning: An introduction},
+ publisher = {MIT Press},
+ year = {2022},
+ url = {probml.ai}
+}
+
+@book{alpaydin_introduction_2010-1,
+	series = {},
+	title = {Introduction to {Machine} {Learning}},
+	isbn = {978-0-262-01243-0},
+	url = {https://books.google.es/books?id=4j9GAQAAIAAJ},
+	publisher = {MIT Press},
+	author = {Alpaydin, E.},
+	year = {2020},
+	lccn = {2004109627},
+}
+
+@book{Mostafa2012,
+  added-at = {2019-10-11T10:10:38.000+0200},
+  author = {Abu-Mostafa, Yaser S. and Magdon-Ismail, Malik and Lin, Hsuan-Tien},
+  biburl = {https://www.bibsonomy.org/bibtex/2079c807902a5b01cf801a8c7cec519ed/lopusz_kdd},
+  description = {Learning From Data: Yaser S. Abu-Mostafa, Malik Magdon-Ismail, Hsuan-Tien Lin: 9781600490064: Amazon.com: Books},
+  interhash = {5665353d0134ff1dea4ae32e99335a76},
+  intrahash = {079c807902a5b01cf801a8c7cec519ed},
+  keywords = {general_machine_learning},
+  publisher = {AMLBook},
+  timestamp = {2019-10-12T23:47:07.000+0200},
+  title = {Learning From Data},
+  year = 2012
+}
+
+
+@book{mitchell_machine_1997,
+	address = {New York},
+	series = {{McGraw}-{Hill} series in computer science},
+	title = {Machine {Learning}},
+	isbn = {978-0-07-042807-2},
+	language = {en},
+	publisher = {McGraw-Hill},
+	author = {Mitchell, Tom M.},
+	year = {1997},
+	keywords = {Machine learning, Computer algorithms},
+	file = {Mitchell - 1997 - Machine Learning.pdf:C\:\\Users\\carlo\\Zotero\\storage\\RUHUGLEM\\Mitchell - 1997 - Machine Learning.pdf:application/pdf},
+}
+
+@book{Goodfellow-et-al-2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    year={2016}
+}
+
+
+
+@article{LeCun-Yann-Bengio,
+author = {LeCun, Yann and Bengio, Y. and Hinton, Geoffrey},
+year = {2015},
+month = {},
+pages = {436-44},
+title = {Deep Learning},
+volume = {521},
+journal = {Nature},
+doi = {10.1038/nature14539}
+}
+
+@book{UnderstandingDeepLearning,
+    title={Understanding deep learning},
+    author={Prince, Simon JD},
+    publisher={MIT press},
+    year={2023}
+}
+
+
+@article{Schmidhuber_2015,
+   title={Deep learning in neural networks: An overview},
+   volume={61},
+   ISSN={0893-6080},
+   url={http://dx.doi.org/10.1016/j.neunet.2014.09.003},
+   DOI={10.1016/j.neunet.2014.09.003},
+   journal={Neural Networks},
+   publisher={Elsevier BV},
+   author={Schmidhuber, Jürgen},
+   year={2015},
+   pages={85–117} }
+
+
+@book{DeepLearningFoundationsConcepts,
+    title={Deep learning: Foundations and concepts},
+    author={Christopher M. Bishop and Hugh Bishop },
+    publisher={Springer Nature},
+    year={2023}
+}
+
+
+@book{NNTricks,
+    title={Neural networks: tricks of the trade},
+    author={Grégoire Montavon and Geneviève B. Orr and Klaus-Robert Müller},
+    publisher={Springer},
+    year={2012},
+    volume={7700}
+}
+
+
+@book{Haykin,
+author = {Haykin, Simon},
+title = {Neural Networks: A Comprehensive Foundation},
+year = {1998},
+isbn = {0132733501},
+publisher = {Prentice Hall PTR},
+address = {USA},
+edition = {segunda},
+}
+
+
+@book{NNPatternRecogLibro,
+    title={Neural networks for pattern recognition},
+    author={Christopher Bishop},
+    publisher={Oxford university press},
+    year={1995}
+}
+
+
+
+@article{article_func_activacion,
+author = {Sharma, Siddharth and Sharma, Simone and Athaiya, Anidhya},
+year = {2020},
+month = {},
+pages = {310-316},
+title = {ACTIVATION FUNCTIONS IN NEURAL NETWORKS},
+volume = {04},
+journal = {International Journal of Engineering Applied Sciences and Technology},
+doi = {10.33564/IJEAST.2020.v04i12.054}
+}
+
+
+
+@article{ioffe2015batch,
+      title={Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift}, 
+      author={Sergey Ioffe and Christian Szegedy},
+      year={2015},
+      eprint={1502.03167},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+
+
+@article{hinton2012improving,
+      title={Improving neural networks by preventing co-adaptation of feature detectors}, 
+      author={Geoffrey E. Hinton and Nitish Srivastava and Alex Krizhevsky and Ilya Sutskever and Ruslan R. Salakhutdinov},
+      year={2012},
+      eprint={1207.0580},
+      journal={ArXiv},
+      archivePrefix={arXiv},
+      primaryClass={cs.NE}
+}
+
+
+
+@ARTICLE{9451544,
+  author={Li, Zewen and Liu, Fan and Yang, Wenjie and Peng, Shouheng and Zhou, Jun},
+  journal={IEEE Transactions on Neural Networks and Learning Systems}, 
+  title={A Survey of Convolutional Neural Networks: Analysis, Applications, and Prospects}, 
+  year={2022},
+  volume={33},
+  number={12},
+  pages={6999-7019},
+  keywords={Convolutional neural networks;Feature extraction;Neurons;Deep learning;Computer vision;Computer vision;convolutional neural networks (CNNs);deep learning;deep neural networks},
+  doi={10.1109/TNNLS.2021.3084827}}
+
+
